<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="142sp"
        tools:layout_editor_absoluteY="349sp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:src="@drawable/school7"
            android:background="@color/white"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playing_with_numbers"
            android:padding="16sp"
            android:layout_marginTop="10sp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="#FFEB3B"
           android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3_1"
            android:layout_marginTop="12sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="20sp"

            android:background="@color/silver"
            app:drawableStartCompat="@drawable/pdf" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3_2"
            android:layout_marginTop="12sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3_3"
            android:layout_marginTop="12sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3_4"
            android:layout_marginTop="12sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3_5"
            android:layout_marginTop="12sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3_6"
            android:layout_marginTop="12sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3_7"
            android:layout_marginTop="12sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />
        <Button
            android:id="@+id/back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:gravity="left"
            android:layout_marginLeft="150sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="17sp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>