<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="142sp"
        tools:layout_editor_absoluteY="349sp"
        android:background="@color/white">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:src="@drawable/school7"
        android:background="@color/white"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integers"
        android:padding="19sp"
        android:layout_marginTop="10sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="#3BFFFF"
        android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:background="@color/silver"
            android:padding="17sp"
            android:text="Exercise 6.1"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/pdf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_6_2"
            android:layout_marginTop="30sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="17sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableStartCompat="@drawable/pdf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_6_3"
            android:layout_marginTop="30sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="17sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableStartCompat="@drawable/pdf" />

        <Button
            android:id="@+id/back5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:gravity="left"
            android:layout_marginLeft="150sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="90sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>