<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:layout_marginTop="1sp"
            android:gravity="center"
            android:text="@string/dark_energy_school"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="39sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/mathematics_for_class_6"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/schImage"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:src="@drawable/school1"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_exercise"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:padding="10sp"
            android:visibility="visible"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>