<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Symmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="142sp"
        tools:layout_editor_absoluteY="349sp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:src="@drawable/school13"
            android:background="@color/white"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symmetry"
            android:padding="16sp"
            android:layout_marginTop="10sp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:background="#090909"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Exercise 13.1"
            android:layout_marginTop="10sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="17sp"
            android:textSize="20sp"

            android:background="@color/silver"
            app:drawableStartCompat="@drawable/pdf" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Exercise 13.2"
            android:layout_marginTop="10sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="17sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Exercise 13.3"
            android:layout_marginTop="10sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:padding="17sp"
            android:textSize="20sp"
            android:background="@color/silver"
            app:drawableLeftCompat="@drawable/pdf" />

        <Button
            android:id="@+id/back12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:gravity="left"
            android:layout_marginStart="150sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="69sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>